--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,24 @@
 dist: bionic
 language: minimal
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq -y software-properties-common uidmap
-  - sudo add-apt-repository -y ppa:projectatomic/ppa
+  # Install podman
+  # See https://podman.io/getting-started/installation - Ubuntu
+  - . /etc/os-release
+  - sudo sh -c "echo 'deb http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/ /' > /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list"
+  - wget -nv https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable/xUbuntu_${VERSION_ID}/Release.key -O- | sudo apt-key add -
   - sudo apt-get update -qq
   - sudo apt-get -qq -y install podman
 install:
   - travis_retry podman build --rm -t test/rpm-build .
 before_script:
+  # This is an example with Fedora ruby, as it is easy to test it on Travis CI.
+  # We can also use RHSCL Ruby repository on this step.
   - git clone https://src.fedoraproject.org/rpms/ruby.git
 script:
+  # Create SRPM from the spec file.
   - |
-    podman run --rm -t -v $(pwd)/ruby:/work/ruby -u root test/rpm-build bash -cx "cd ruby && fedpkg srpm"
+    podman run --rm -t -v $(pwd)/ruby:/work/ruby -u root --network=host test/rpm-build bash -cx "cd ruby && fedpkg srpm"
+  # Test if the SRPM is created.
   - |
     ls $(pwd)/ruby/*.src.rpm
 branches:
